# disconnected.systems

./: .cobalt.yml  .gitignore  .gitlab-ci.yml  .vale.ini  2018-04-01-test.json  2018-04-01-this-is-a-test.json  Cargo.toml  LICENSE.md  _config.yml  config.toml  gridsome.config.js  gutenberg-wrapper  index.html  index.liquid  netlify.toml  nuxt.config.js  package-lock.json  package.json
_drafts/: 2015-12-11-raspberry-pi-automated-headless-setup.md  2016-02-03-raspberry-pi-archlinuxarm-create-img.md  bare-metal-c-on-the-teensy-3.1.md  bare-metal-rust-on-the-teensy-3.1.md  bash-strict-mode.md  charlie-cube.md  git2to-introduction.md  nim-on-teensy-3.1.md  nimduino.md  raspberry-pi-archlinuxarm-setup.md  raspberry-pi-setup.md  teensy-3.1-bare-metal.md
_includes/: google_analytics.html  head.html
_layouts/: default.html  default.liquid  post.html  post.liquid
_posts/: 2012-10-07-arduino-and-cmake.md  2012-10-19-raspberry-powered-wallboard.md  2012-10-24-arduino-powered-rover.md  2012-11-17-xbee-configuration.md  2013-04-14-quasselcore-on-archlinux.md  2013-09-24-shrimping-it.md  2015-11-02-nim-on-arduino.md  2015-11-12-bare-metal-assembly-on-the-teensy-3.1.md  2015-11-23-bare-metal-c-on-the-teensy-3.1.md  2016-01-24-bare-metal-rust-on-the-teensy-3.1.md  2016-03-21-raspberry-pi-archlinuxarm-setup.md  2016-04-14-another-bash-strict-mode.md
content/: 2012-10-07-arduino-and-cmake.md  2012-10-19-raspberry-powered-wallboard.md  2012-10-24-arduino-powered-rover.md  2012-11-17-xbee-configuration.md  2013-04-14-quasselcore-on-archlinux.md  2013-09-24-shrimping-it.md  _index.md  (+8 more)
(+183 files in other folders)
