[package]
name = "ssg"
version = "0.1.0"
authors = ["Michael Daffin <michael@daffin.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.31"
render = { git = "https://github.com/render-rs/render.rs.git" }

[dev-dependencies]
tempfile = "3.1.0"
test-case = "1.0.0"
