[package]
name = "ssg"
version = "0.1.0"
authors = ["Michael Daffin <michael@daffin.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.31"
render = { git = "https://github.com/render-rs/render.rs.git" }
walkdir = "2.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8.13"
toml = "0.5.6"
err-derive = "0.2.4"
serde_json = "1.0.56"
log = "0.4.11"
env_logger = "0.7.1"
pulldown-cmark = "0.7.2"
thiserror = "1.0.20"

[dev-dependencies]
tempfile = "3.1.0"
test-case = "1.0.0"
